# faff-cli

./: .gitignore  CLI_UX_GUIDELINES.md  README.md  RELEASE_PROCESS.md  pyproject.toml  readme.txt
.github/workflows/: ci.yml  publish-dev.yml  release.yml
src/: plugins
src/faff/: cli.py  context.py  core.py  models.py
src/faff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/faff/cli/: connection.py  log.py  main.py  utils.py
src/faff/cli/models/: activity.py  log.py  plan.py  summary_entry.py  timeline_entry.py  timesheet.py
src/faff/core/: __init__.py  config.py  file_system.py  log_formatter.py  plugin.py  toml_serializer.py  workspace.py
src/faff/models/: __init__.py  log.py  summary_entry.py  timeline_entry.py  timesheet.py
src/faff_cli/: compiler.py  connection.py  field.py  file_utils.py  filtering.py  id.py  intent.py  log.py  main.py  output.py  plan.py  plugin.py  private_log_formatter.py  query.py  remote.py  session.py  source.py  start.py  timesheet.py  utils.py
src/faff_cli/ui/: __init__.py  fuzzy_select.py
src/plugins/: dummy.py  element_compiler.py  jira.py  myhours.py  target_compiler.py
tests/: README.md  conftest.py  test_cli_log.py  test_cli_plan.py  test_cli_status.py  test_file_utils.py  test_integration.py  test_models.py  test_utils.py
tests/testdata/: sample_plan.toml
